# Trellis

./: .gitignore
.cursor/hooks/: session-start.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: runtime-build-test.yml  runtime-publish.yml
.pi/agents/: trellis-check.md  trellis-implement.md
.trellis/spec/cli/backend/: commands-channel.md  platform-integration.md
.trellis/tasks/05-10-docs-site-config-yaml-guide/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-10-session-auto-commit-config/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-10-spec-sweep-may10/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/05-11-investigate-pi-extension-subagent-context-double-injection/: prd.md  task.json
.trellis/tasks/05-13-create-migration-manifest/: prd.md  task.json
.trellis/tasks/06-17-community-governance/: task.json
.trellis/tasks/06-18-fix-windows-mem-cwd/: task.json
.trellis/tasks/archive/2026-05/05-09-git-add-force-prevention/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-09-pi-workflow-state-injection/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-11-bump-default-hook-timeouts-to-survive-windows-python-cold-start/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-11-opencode-subagent-context-injection/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-05/05-11-polyrepo-git-status-context/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-05/05-11-shell-dialect-context-injection-audit/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-11-soften-copilot-sessionstart-systemmessage-no-longer-claim-copilot-ignores/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-05/05-13-uninstall-overdelete-manifest-leak/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/archive/2026-06/06-24-06-24-fix-pi-session-start-context/: task.json
.trellis/tasks/archive/2026-07/07-06-pypi-global-runtime/: hook-reference.md  prd.md  task.json
.trellis/workspace/demo/: index.md  journal-1.md
trellis-runtime/: LICENSE  README.md  pyproject.toml
trellis-runtime/scripts/: sync_upstream.sh
trellis-runtime/src/trellis_runtime/platform_hooks/: __init__.py
trellis-runtime/src/trellis_runtime/platform_hooks/codex/: __init__.py
trellis-runtime/src/trellis_runtime/platform_hooks/copilot/: __init__.py
trellis-runtime/src/trellis_runtime/wrappers/: __init__.py  session_start.py
(+5 files in other folders)
